# norc_pers

./: Cargo.toml
.github/workflows/: rust.yml
norc_pers/: Cargo.toml
norc_pers/src/: borrow.rs  champ.rs  lib.rs  list.rs  node.rs  vector.rs
norc_sync/: Cargo.toml
norc_sync/examples/: ants.rs
norc_sync/src/: lib.rs
src/: borrow.rs  lib.rs  list.rs  node.rs  vector.rs
