[package]
name = "norc_pers"
version = "0.1.0"
edition = "2024"

[dependencies]
allocator-api2 = { version = "0.2.21", default-features = false, features = ["alloc"], optional = true }
cfg-if = "1.0.1"
either = { version = "1.15.0", default-features = false }
zerocopy = { version = "0.8.31", default-features = false }

[features]
default = ["std", "allocator-api2"]
std = []
