[package]
name = "norc_sync"
version = "0.1.0"
edition = "2024"

[dependencies]
allocator-api2 = { version = "0.3.0", default-features = false, features = ["alloc"], optional = true }
cfg-if = "1.0.3"
norc_pers = { path = "../norc_pers" }

[features]
default = ["std"]
std = []

[dev-dependencies]
smol = "2.0.2"
